[package]
name = "jia-mi-vaolor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
rust-crypto = "0.2.36"
sha2 = "0.10.6"
base64ct = "1.5.3"
base16ct = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]